--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-hapiclient>=0.2.3
-numpy>=1.21.2
-pandas>=1.4.1
+cdflib>=0.4.7
+engineering_notation>=0.6.0
+ipython>=8.12.3
+matplotlib>=3.5.2
+numpy>=1.21.6
 pyrubberband>=0.3.0
-resampy>=0.2.2
-scipy>=1.7.3
-viresclient>=0.10.4
+resampy>=0.4.3
+scipy>=1.13.0
